# django-multiple-db-postgresql-mongodb

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  example_env
django/: requirement.txt
django/example_app/: models.py
django/example_user/: apps.py  models.py
django/myproject/: multiple_db_settings.py  routing.py
django_multiple_db/: requirement.txt
django_multiple_db/myproject/: multiple_db_settings.py  settings.py  urls.py
django_porject/: Dockerfile
django_porject/myproject/: settings.py
django_project/: .dockerignore  Dockerfile  Pipfile  pyproject.toml
django_project/example_app/: models.py
django_project/myproject/: multiple_db_settings.py  routing.py  settings.py  urls.py
